sample_manifest (19).yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: 'mbsgui-pr-13-java-dev'
  namespace: 'mbs-dev'
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/load-balance: "round_robin"
    kubernetes.io/ingress.allow-http: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  labels:
    project: 'mbs-app-gui'
    branch: 'pr-13'
    commit: '86a4ea9'
    role: java
    environment: dev
spec:
  rules:
    - host: mbsgui-dev-pr-13.kubeodc-test.corp.intranet
      http:
        paths:
          - path: /
            backend:
              serviceName: 'mbsgui-pr-13-java-dev'
              servicePort: 8080
  tls:
    - hosts:
      - 'mbsgui-dev-pr-13.kubeodc-test.corp.intranet'
      secretName: managed-tls-secret
---
---
apiVersion: v1
kind: Service
metadata:
  name: 'mbsgui-pr-13-java-dev'
  namespace: 'mbs-dev'
  labels:
    project: 'mbs-app-gui'
    branch: 'pr-13'
    commit: '86a4ea9'
    role: java
    environment: dev
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    project: 'mbs-app-gui'
    branch: 'pr-13'
    commit: '86a4ea9'
    role: java
    environment: dev
  type: ClusterIP
---
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 'mbsgui-pr-13-java-dev'
  labels:
    project: 'mbs-app-gui'
    branch: 'pr-13'
    commit: '86a4ea9'
    role: java
    environment: dev
spec:
  selector:
    matchLabels:
      project: 'mbs-app-gui'
      branch: 'pr-13'
      role: java
      environment: dev
  replicas: 1
  revisionHistoryLimit: 0
  template:
    metadata:
      labels:
        project: 'mbs-app-gui'
        branch: 'pr-13'
        commit: '86a4ea9'
        role: java
        environment: dev
    spec:
      containers:
        - name: java-pr-13
          image: 'nexusprod.corp.intranet:4567/mbs_dev/mbs-app-gui:dev-pr-13'
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              memory: 2048Mi
              cpu: 250m
            requests:
              memory: 512Mi
              cpu: 100m
      imagePullSecrets:
        - name: mbs-app-gui-pr-13
---
---
